--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,7 +131,7 @@ jobs:
         with:
           pr_number: ${{ steps.find-pr.outputs.pr_number }}
           test_status: ${{ steps.test-run.outcome }}
-          report_url: ${{ fromJSON(steps.upload-results.outputs.object_locations)[0] }}/index.html
+          report_url: ${{ steps.upload-results.outputs.object_locations && fromJSON(steps.upload-results.outputs.object_locations)[0] }}/index.html
           test_type: 'E2E'
           deployment_url: ${{ github.event.deployment_status.target_url }}
 
@@ -153,52 +153,6 @@ jobs:
           aws_bucket: apadana-e2e
           source_dir: '.next/playwright-report'
           destination_dir: ${{ github.sha }}/e2e/html
-
-      - name: Update Final PR Comment
-        if: always() && steps.find-pr.outputs.pr_number && steps.upload-results.outputs.object_locations
-        uses: actions/github-script@v7
-        env:
-          PR_NUMBER: ${{ steps.find-pr.outputs.pr_number }}
-        with:
-          script: |
-            const testStatus = '${{ steps.test-run.outcome }}';
-            const deploymentUrl = '${{ github.event.deployment_status.target_url }}';
-            const locations = ${{ steps.upload-results.outputs.object_locations }};
-            const htmlReportUrl = locations.find(url => url.endsWith('html/index.html'));
-            const isSuccess = testStatus === 'success';
-            const statusEmoji = isSuccess ? '✅' : '❌';
-
-            const comment = `### E2E Tests ${statusEmoji}\n\n` +
-              `Ran against [${deploymentUrl}](${deploymentUrl})\n\n` +
-              (htmlReportUrl ? `[View Full Report](${htmlReportUrl})\n\n` : '') +
-              `<sub>Updated at: ${new Date().toISOString()}</sub>`;
-
-            const { data: comments } = await github.rest.issues.listComments({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: parseInt(process.env.PR_NUMBER),
-            });
-
-            const botComment = comments.find(c => 
-              c.user.type === 'Bot' && 
-              c.body.includes('E2E Tests')
-            );
-
-            if (botComment) {
-              await github.rest.issues.updateComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                comment_id: botComment.id,
-                body: comment
-              });
-            } else {
-              await github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: parseInt(process.env.PR_NUMBER),
-                body: comment
-              });
-            }
 
   storybook:
     name: Storybook Screenshots
@@ -225,9 +179,6 @@ jobs:
             if (commits.data.length > 0) {
               core.setOutput('pr_number', commits.data[0].number);
             }
-
-      - name: Install Playwright
-        run: pnpm dlx playwright install
 
       - name: Test Storybook
         id: test-run
