--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,9 +71,7 @@ jobs:
     name: Fix and commit code style
     needs: [validate]
     runs-on: ubuntu-24.04
-    if: |
-      github.event_name == 'pull_request' && 
-      needs.validate.result == 'failure'
+    if: github.event_name == 'pull_request' && needs.validate.result == 'failure'
     steps:
       - uses: actions/checkout@v4
         with:
@@ -101,9 +99,7 @@ jobs:
     name: E2E
     needs: [test]
     runs-on: ubuntu-24.04
-    if: |
-      github.event_name == 'deployment_status' && 
-      github.event.deployment_status.state == 'success'
+    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success'
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
@@ -125,22 +121,6 @@ jobs:
               core.setOutput('pr_number', commits.data[0].number);
             }
 
-      - name: Install Playwright
-        run: pnpm dlx playwright install
-
-      - name: Run E2E Tests
-        run: pnpm run e2e:ci
-
-      - name: Update PR Comment for E2E
-        if: always() && steps.find-pr.outputs.pr_number
-        uses: ./.github/actions/update-pr-comment
-        with:
-          pr_number: ${{ steps.find-pr.outputs.pr_number }}
-          test_status: ${{ steps.test-run.outcome }}
-          report_url: ${{ steps.upload-results.outputs.object_locations && fromJSON(steps.upload-results.outputs.object_locations)[0] }}/index.html
-          test_type: 'E2E'
-          deployment_url: ${{ github.event.deployment_status.target_url }}
-
       - name: Run E2E Tests
         id: test-run
         run: pnpm run e2e:ci
@@ -159,6 +139,16 @@ jobs:
           aws_bucket: apadana-e2e
           source_dir: '.next/playwright-report'
           destination_dir: ${{ github.sha }}/e2e/html
+
+      - name: Update PR Comment for E2E
+        if: always() && steps.find-pr.outputs.pr_number
+        uses: ./.github/actions/update-pr-comment
+        with:
+          pr_number: ${{ steps.find-pr.outputs.pr_number }}
+          test_status: ${{ steps.test-run.outcome }}
+          report_url: ${{ steps.upload-results.outputs.object_locations && fromJSON(steps.upload-results.outputs.object_locations)[0] }}/index.html
+          test_type: 'E2E'
+          deployment_url: ${{ github.event.deployment_status.target_url }}
 
   storybook:
     name: Storybook Screenshots
