damn it string programming

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -31,18 +31,19 @@ jobs:
               repo,
               workflow_id: 'ci.yml',
               branch: context.ref.replace('refs/heads/', ''),
-              per_page: 1
+              per_page: 1,
             });
             if (workflows.data.workflow_runs.length > 0) {
               const workflowRun = workflows.data.workflow_runs[0];
               const jobs = await github.rest.actions.listJobsForWorkflowRun({
                 owner,
                 repo,
-                run_id: workflowRun.id
+                run_id: workflowRun.id,
               });
-              const testJob = jobs.data.jobs.find(job => job.name === 'test');
+              const testJob = jobs.data.jobs.find((job) => job.name === 'test');
               if (!testJob || testJob.conclusion !== 'success') {
                 core.setOutput('skip', 'true');
+              }
             }
 
       - uses: ./.github/actions/setup
