--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -18,54 +18,25 @@ jobs:
   e2e:
     name: Playwright
     runs-on: ubuntu-24.04
-    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success' || github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success'
+    # Run when deployment is successful or when CI is successful
+    if:
+      (github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success') ||
+      (github.event_name == 'workflow_run' && github.event.workflow_run.name == 'CI' && github.event.workflow_run.conclusion == 'success')
     steps:
       - uses: actions/checkout@v4
 
-      - name: Skip if CI tests failed
+      - name: Check skip conditions
         id: skip-check
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { owner, repo } = context.repo;
-            const workflows = await github.rest.actions.listWorkflowRuns({
-              owner,
-              repo,
-              workflow_id: 'ci.yml',
-              branch: context.ref.replace('refs/heads/', ''),
-              per_page: 1,
-            });
-            if (workflows.data.workflow_runs.length > 0) {
-              const workflowRun = workflows.data.workflow_runs[0];
-              const jobs = await github.rest.actions.listJobsForWorkflowRun({
-                owner,
-                repo,
-                run_id: workflowRun.id,
-              });
-              const testJob = jobs.data.jobs.find((job) => job.name === 'test');
-              if (!testJob || testJob.conclusion !== 'success') {
-                core.setOutput('skip', 'true');
-              }
-            }
+        run: |
+          if [[ "${{ github.event_name }}" == "deployment_status" && "${{ github.event.deployment_status.state }}" == "failure" ]] || \
+             [[ "${{ github.event_name }}" == "workflow_run" && "${{ github.event.workflow_run.conclusion }}" == "failure" ]]; then
+            echo "skip=true" >> $GITHUB_OUTPUT
+          else
+            echo "skip=false" >> $GITHUB_OUTPUT
+          fi
 
       - uses: ./.github/actions/setup
       - uses: ./.github/actions/playwright
-
-      - name: Find PR number
-        id: find-pr
-        if: always()
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { owner, repo } = context.repo;
-            const commits = await github.rest.repos.listPullRequestsAssociatedWithCommit({
-              owner,
-              repo,
-              commit_sha: context.sha,
-            });
-            if (commits.data.length > 0) {
-              core.setOutput('pr_number', commits.data[0].number);
-            }
 
       - name: Run E2E Tests
         if: steps.skip-check.outputs.skip != 'true'
@@ -75,6 +46,17 @@ jobs:
           BASE_URL: ${{ github.event.deployment_status.target_url }}
           VERCEL_AUTOMATION_BYPASS_SECRET: ${{ secrets.VERCEL_AUTOMATION_BYPASS_SECRET }}
           E2E_TESTING_SECRET: ${{ secrets.E2E_TESTING_SECRET }}
+
+      - name: Find PR number
+        id: find-pr
+        if: always()
+        run: |
+          PR_NUMBER=$(gh pr list --search "${{ github.sha }}" --json number -q '.[0].number')
+          if [ ! -z "$PR_NUMBER" ]; then
+            echo "pr_number=$PR_NUMBER" >> $GITHUB_OUTPUT
+          fi
+        env:
+          GH_TOKEN: ${{ github.token }}
 
       - name: Upload Test Report
         if: always() && hashFiles('.next/playwright-report/**') != ''
@@ -100,7 +82,8 @@ jobs:
   storybook:
     name: Storybook
     runs-on: macos-14
-    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success'
+    # Run when all CI jobs are successful
+    if: github.event_name == 'workflow_run' && github.event.workflow_run.name == 'CI' && github.event.workflow_run.conclusion == 'success'
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
@@ -109,18 +92,14 @@ jobs:
 
       - name: Find PR number
         id: find-pr
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { owner, repo } = context.repo;
-            const commits = await github.rest.repos.listPullRequestsAssociatedWithCommit({
-              owner,
-              repo,
-              commit_sha: context.sha,
-            });
-            if (commits.data.length > 0) {
-              core.setOutput('pr_number', commits.data[0].number);
-            }
+        if: always()
+        run: |
+          PR_NUMBER=$(gh pr list --search "${{ github.sha }}" --json number -q '.[0].number')
+          if [ ! -z "$PR_NUMBER" ]; then
+            echo "pr_number=$PR_NUMBER" >> $GITHUB_OUTPUT
+          fi
+        env:
+          GH_TOKEN: ${{ github.token }}
 
       - run: pnpm dlx playwright install
 
@@ -145,5 +124,5 @@ jobs:
         with:
           pr_number: ${{ steps.find-pr.outputs.pr_number }}
           test_status: ${{ steps.test-run.outcome }}
-          report_url: ${{ fromJSON(steps.upload-results.outputs.object_locations)[0] }}/index.html
+          report_url: ${{ fromJSON(steps.upload-results.outputs.object_locations)[0] }}
           test_type: 'Storybook'
