--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -18,28 +18,15 @@ jobs:
   e2e:
     name: Playwright
     runs-on: ubuntu-24.04
-    # Run when deployment is successful or when CI is successful
-    if:
-      (github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success') ||
-      (github.event_name == 'workflow_run' && github.event.workflow_run.name == 'CI' && github.event.workflow_run.conclusion == 'success')
+    # Run when deployment is successful
+    if: (github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success')
     steps:
       - uses: actions/checkout@v4
-
-      - name: Check skip conditions
-        id: skip-check
-        run: |
-          if [[ "${{ github.event_name }}" == "deployment_status" && "${{ github.event.deployment_status.state }}" == "failure" ]] || \
-             [[ "${{ github.event_name }}" == "workflow_run" && "${{ github.event.workflow_run.conclusion }}" == "failure" ]]; then
-            echo "skip=true" >> $GITHUB_OUTPUT
-          else
-            echo "skip=false" >> $GITHUB_OUTPUT
-          fi
 
       - uses: ./.github/actions/setup
       - uses: ./.github/actions/playwright
 
       - name: Run E2E Tests
-        if: steps.skip-check.outputs.skip != 'true'
         id: test-run
         run: pnpm run e2e:ci
         env:
@@ -67,7 +54,20 @@ jobs:
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_bucket: apadana-e2e
           source_dir: '.next/playwright-report'
-          destination_dir: ${{ github.sha }}/e2e/html
+          destination_dir: ${{ github.sha }}/playwright
+
+      - name: Process Report URL
+        id: process-url
+        if: steps.upload-results.outputs.object_locations
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const locations = JSON.parse(process.env.LOCATIONS);
+            const htmlUrl = locations.find(location => location.endsWith('playwright/index.html'));
+            if (!htmlUrl) { console.log("No index.html found"); }
+            core.setOutput('report_url', htmlUrl);
+        env:
+          LOCATIONS: ${{ steps.upload-results.outputs.object_locations }}
 
       - name: Update PR Comment for E2E
         if: always() && steps.find-pr.outputs.pr_number
@@ -75,7 +75,7 @@ jobs:
         with:
           pr_number: ${{ steps.find-pr.outputs.pr_number }}
           test_status: ${{ steps.test-run.outcome }}
-          report_url: ${{ steps.upload-results.outputs.object_locations && fromJSON(steps.upload-results.outputs.object_locations)[0] }}
+          report_url: ${{ steps.process-url.outputs.report_url }}
           test_type: 'E2E'
           deployment_url: ${{ github.event.deployment_status.target_url }}
 
@@ -83,7 +83,7 @@ jobs:
     name: Storybook
     runs-on: macos-14
     # Run when all CI jobs are successful
-    if: github.event_name == 'workflow_run' && github.event.workflow_run.name == 'CI' && github.event.workflow_run.conclusion == 'success'
+    if: github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success'
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
@@ -116,7 +116,20 @@ jobs:
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_bucket: apadana-e2e
           source_dir: 'storybook-e2e-html-report'
-          destination_dir: ${{ github.sha }}/storybook/html
+          destination_dir: ${{ github.sha }}/storybook
+
+      - name: Process Storybook Report URL
+        id: process-storybook-url
+        if: steps.upload-results.outputs.object_locations
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const locations = JSON.parse(process.env.LOCATIONS);
+            const htmlUrl = locations.find(location => location.endsWith('storybook/index.html'));
+            if (!htmlUrl) { console.log("No index.html found"); }
+            core.setOutput('report_url', htmlUrl);
+        env:
+          LOCATIONS: ${{ steps.upload-results.outputs.object_locations }}
 
       - name: Update PR Comment for Storybook
         if: always() && steps.find-pr.outputs.pr_number
@@ -124,5 +137,5 @@ jobs:
         with:
           pr_number: ${{ steps.find-pr.outputs.pr_number }}
           test_status: ${{ steps.test-run.outcome }}
-          report_url: ${{ fromJSON(steps.upload-results.outputs.object_locations)[0] }}
+          report_url: ${{ steps.process-storybook-url.outputs.report_url }}
           test_type: 'Storybook'
