--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -83,7 +83,7 @@ jobs:
     name: Storybook
     runs-on: macos-14
     # Run when all CI jobs are successful
-    if: github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success'
+    if: github.event.workflow_run.conclusion == 'success'
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
