--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,23 +103,10 @@ jobs:
       - uses: ./.github/actions/setup
       - uses: ./.github/actions/playwright
 
-      - name: Find PR number
+      - name: Set PR number
         id: find-pr
-        if: always()
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { data: prs } = await github.rest.search.issuesAndPullRequests({
-              q: `${context.sha} is:pr`,
-            });
-
-            if (prs.items.length > 0) {
-              console.log(`Found PR number: ${prs.items[0].number}`);
-              core.setOutput('pr_number', prs.items[0].number);
-            } else {
-              console.log('No PR found for this commit');
-              core.setOutput('pr_number', '');
-            }
+        if: ${{ github.event_name == 'pull_request' }}
+        run: echo "pr_number=${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
 
       - run: pnpm dlx playwright install
 
