--- a/src/docker/nginx/nginx.conf
+++ b/src/docker/nginx/nginx.conf
@@ -1,24 +1,48 @@
 events {
     worker_connections 1024;
+    multi_accept on;
 }
 
 http {
     client_max_body_size 512M;
 
+    # SSL optimization
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    ssl_session_tickets off;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    
+    # Proxy optimization
+    proxy_buffers 8 16k;
+    proxy_buffer_size 16k;
+    proxy_connect_timeout 300;
+    proxy_send_timeout 300;
+    proxy_read_timeout 300;
+    proxy_http_version 1.1;
+    proxy_set_header Connection "";
+    keepalive_timeout 300;
+    keepalive_requests 100;
+
     upstream dev_backend {
         server app_dev:3000;
+        keepalive 32;
     }
 
     upstream dev_prisma_studio {
         server app_dev:5555;
+        keepalive 32;
     }
 
     upstream dev_storybook {
         server app_dev:6006;
+        keepalive 32;
     }
 
     upstream prod_backend {
         server app_prod:3030;
+        keepalive 32;
     }
 
     proxy_cookie_flags ~.* secure httponly samesite=lax;
@@ -94,5 +118,5 @@ http {
             proxy_set_header Connection "upgrade";
             proxy_read_timeout 86400;
         }
-    } 
+    }
 }
