--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Process Report URL
         id: process-url
-        if: steps.upload-results.outputs.object_locations
+        if: always() && steps.upload-results.outputs.object_locations
         uses: actions/github-script@v7
         with:
           script: |
@@ -70,6 +70,13 @@ jobs:
             core.setOutput('report_url', htmlUrl);
         env:
           LOCATIONS: ${{ steps.upload-results.outputs.object_locations }}
+
+      - name: Create a Check with the Report URL
+        if: always() && steps.process-url.outputs.report_url
+        run: |
+          gh check create --name "E2E Tests" --status "completed" --details-url ${{ steps.process-url.outputs.report_url }}
+        env:
+          GH_TOKEN: ${{ github.token }}
 
       - name: Update PR Comment for E2E
         if: always() && steps.find-pr.outputs.pr_number
