--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,6 +99,8 @@ jobs:
     needs: [test]
     timeout-minutes: 20
     steps:
+      - name: Install gh
+        run: brew install gh
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
       - uses: ./.github/actions/playwright
@@ -152,6 +154,15 @@ jobs:
             core.setOutput('report_url', htmlUrl);
         env:
           LOCATIONS: ${{ steps.upload-results.outputs.object_locations }}
+
+      - name: Create a Check with the Report URL
+        if: always() && steps.process-storybook-url.outputs.report_url
+        uses: ./.github/actions/test-report
+        with:
+          test-name: 'Storybook'
+          test-outcome: ${{ steps.test-run.outcome }}
+          report-url: ${{ steps.process-storybook-url.outputs.report_url }}
+          github-token: ${{ github.token }}
 
       - name: Update PR Comment for Storybook
         if: always() && steps.find-pr.outputs.pr_number != ''
