--- a/package.json
+++ b/package.json
@@ -49,7 +49,15 @@
     "docker:dev": "DOCKER_BUILDKIT=1 docker-compose -f src/docker/docker-compose.yml up app_dev",
     "docker:prod": "DOCKER_BUILDKIT=1 docker-compose -f src/docker/docker-compose.yml up app_prod",
     "test:storybook": "playwright test --config=config/playwright.storybook.config.ts",
-    "test:storybook:update": "playwright test --config=config/playwright.storybook.config.ts --update-snapshots"
+    "test:storybook:update": "playwright test --config=config/playwright.storybook.config.ts --update-snapshots",
+    "cdk": "cdk --app 'tsx config/aws-setup/cdk.ts'",
+    "cdk:bootstrap": "cdk bootstrap --app 'tsx config/aws-setup/cdk.ts'",
+    "cdk:deploy": "cdk deploy --app 'tsx config/aws-setup/cdk.ts'",
+    "cdk:deploy:bootstrap": "STACK_TYPE=bootstrap cdk deploy ApadanaBootstrapStack --app 'tsx config/aws-setup/cdk.ts'",
+    "cdk:deploy:resources": "STACK_TYPE=resources cdk deploy --all --app 'tsx config/aws-setup/cdk.ts'",
+    "cdk:destroy": "cdk destroy --app 'tsx config/aws-setup/cdk.ts'",
+    "cdk:diff": "cdk diff --app 'tsx config/aws-setup/cdk.ts'",
+    "cdk:synth": "cdk synth --app 'tsx config/aws-setup/cdk.ts'"
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.38.1",
@@ -112,6 +120,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-stately": "^3.34.0",
+    "redis": "^4.7.0",
     "resend": "^4.0.1",
     "slugify": "^1.6.6",
     "strip-ansi": "^7.1.0",
@@ -149,7 +158,10 @@
     "@vitest/coverage-v8": "^2.1.8",
     "@vitest/ui": "^2.1.8",
     "autoprefixer": "^10.4.20",
+    "aws-cdk": "^2.173.4",
+    "aws-cdk-lib": "^2.173.4",
     "concurrently": "^9.1.1",
+    "constructs": "^10.4.2",
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.3",
