--- a/src/docker/Dockerfile.prod
+++ b/src/docker/Dockerfile.prod
@@ -7,7 +7,7 @@ WORKDIR /app
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
   --mount=type=cache,target=/var/lib/apt,sharing=locked \
   apt-get update && \
-  apt-get install -y python3 make g++ wget grep && \
+  apt-get install -y python3 make g++ wget grep inotify-tools && \
   rm -rf /var/lib/apt/lists/*
 
 # Setup pnpm
