--- a/.github/actions/test-report/action.yml
+++ b/.github/actions/test-report/action.yml
@@ -11,8 +11,11 @@ inputs:
   report-url:
     description: 'URL to the test report'
     required: true
-  github-token:
-    description: 'GitHub token'
+  app-id:
+    description: 'GitHub App ID'
+    required: true
+  private-key:
+    description: 'GitHub App private key'
     required: true
 
 runs:
@@ -21,11 +24,23 @@ runs:
     - name: Create or Update Check with Report URL
       uses: actions/github-script@v7
       with:
-        github-token: ${{ inputs.github-token }}
         script: |
+          const { createAppAuth } = require('@octokit/auth-app');
+          const { Octokit } = require('@octokit/rest');
+
+          const auth = createAppAuth({
+            appId: '${{ inputs.app-id }}',
+            privateKey: '${{ inputs.private-key }}',
+            installationId: context.payload.installation.id
+          });
+
+          const installationToken = await auth({ type: 'installation' });
+          const octokit = new Octokit({ auth: installationToken.token });
+
           const checkName = '${{ inputs.test-name }}';
+
           // Try to find existing check
-          const { data: checks } = await github.rest.checks.listForRef({
+          const { data: checks } = await octokit.checks.listForRef({
             owner: context.repo.owner,
             repo: context.repo.repo,
             ref: context.sha,
@@ -43,12 +58,10 @@ runs:
           };
 
           if (checks.check_runs.length > 0) {
-            // Update existing check
-            await github.rest.checks.update({
+            await octokit.checks.update({
               check_run_id: checks.check_runs[0].id,
               ...params
             });
           } else {
-            // Create new check
-            await github.rest.checks.create(params);
+            await octokit.checks.create(params);
           }
