--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -78,7 +78,8 @@ jobs:
           test-name: 'E2E Tests'
           test-outcome: ${{ steps.test-run.outcome }}
           report-url: ${{ steps.process-url.outputs.report_url }}
-          github-token: ${{ github.token }}
+          app-id: '1100607'
+          private-key: ${{ secrets.APADANA_AUTOMATION_GITHUB_APP_PRIVATE_KEY }}
 
       - name: Update PR Comment for E2E
         if: always() && steps.find-pr.outputs.pr_number
