--- a/.github/actions/test-report/action.yml
+++ b/.github/actions/test-report/action.yml
@@ -25,10 +25,11 @@ runs:
       uses: actions/github-script@v7
       env:
         PRIVATE_KEY: ${{ inputs.private-key }}
+        NODE_OPTIONS: --experimental-specifier-resolution=node
       with:
         script: |
-          const { createAppAuth } = require('@octokit/auth-app');
-          const { Octokit } = require('@octokit/rest');
+          import { createAppAuth } from '@octokit/auth-app';
+          import { Octokit } from '@octokit/rest';
 
           const auth = createAppAuth({
             appId: '${{ inputs.app-id }}',
