--- a/.github/actions/test-report/action.yml
+++ b/.github/actions/test-report/action.yml
@@ -25,11 +25,10 @@ runs:
       uses: actions/github-script@v7
       env:
         PRIVATE_KEY: ${{ inputs.private-key }}
-        NODE_OPTIONS: --experimental-specifier-resolution=node
       with:
         script: |
-          import { createAppAuth } from '@octokit/auth-app';
-          import { Octokit } from '@octokit/rest';
+          const { createAppAuth } =  await import('@octokit/auth-app');
+          const { Octokit } =  await import('@octokit/rest');
 
           const auth = createAppAuth({
             appId: '${{ inputs.app-id }}',
