--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
   },
   "devDependencies": {
     "@octokit/auth-app": "^7.1.3",
+    "@octokit/rest": "^21.0.2",
     "@playwright/test": "^1.49.1",
     "@react-types/provider": "^3.8.5",
     "@storybook/addon-essentials": "^8.4.7",
