--- a/.github/actions/test-report/action.yml
+++ b/.github/actions/test-report/action.yml
@@ -21,19 +21,14 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - name: Install dependencies
-      shell: bash
-      run: |
-        pnpm install @octokit/auth-app @octokit/rest
-
     - name: Create or Update Check with Report URL
       uses: actions/github-script@v7
       env:
         PRIVATE_KEY: ${{ inputs.private-key }}
       with:
         script: |
-          const { Octokit } = await import('@octokit/rest');
           const { createAppAuth } = await import('@octokit/auth-app');
+          const { Octokit } = require('@octokit/rest');
 
           const auth = createAppAuth({
             appId: '${{ inputs.app-id }}',
