--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,8 @@
     ".storybook/preview.tsx",
     ".next/types/**/*.ts",
     "src/prisma/**/*.ts",
-    ".storybook/**/*"
+    ".storybook/**/*",
+    ".github/**/*"
   ],
   "exclude": ["node_modules", ".next"]
 }
