Pass the secret

--- a/.github/actions/test-report/action.yml
+++ b/.github/actions/test-report/action.yml
@@ -14,6 +14,9 @@ inputs:
   app-id:
     description: 'GitHub App ID'
     required: true
+  private-key:
+    description: 'GitHub App private key'
+    required: true
 
 runs:
   using: 'composite'
@@ -25,5 +28,5 @@ runs:
         INPUT_TEST_NAME: ${{ inputs.test-name }}
         INPUT_TEST_OUTCOME: ${{ inputs.test-outcome }}
         INPUT_REPORT_URL: ${{ inputs.report-url }}
-        PRIVATE_KEY: ${{ secrets.APADANA_AUTOMATION_GITHUB_APP_PRIVATE_KEY }}
+        PRIVATE_KEY: ${{ inputs.private-key }}
       run: node $GITHUB_ACTION_PATH/index.mjs
