--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -161,6 +161,7 @@ jobs:
           test-name: 'Storybook'
           test-outcome: ${{ steps.test-run.outcome }}
           report-url: ${{ steps.process-storybook-url.outputs.report_url }}
+          private-key: ${{ secrets.APADANA_AUTOMATION_GITHUB_APP_PRIVATE_KEY }}
 
       - name: Update PR Comment for Storybook
         if: always() && steps.find-pr.outputs.pr_number != ''
